--- a/Easy4hardware/Easy4hardware.html
+++ b/Easy4hardware/Easy4hardware.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,21 +12,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Blaka+Ink&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet"> 
 </head>
-
 <body>
+    <div class="head">
+        <h1>EaSy4hArDwArEs</h1>
+    </div>
     <nav class="header">
+        <div class="logo">LOGO</div>
         <ul>
-            <li><a class="logo">LOGO</a></li>
             <li><a href="#" class="head1">Home</a></li>
             <li><a href="#" class="head1">About us</a></li>
             <li><a href="#" class="head1">Services</a></li>
-            <li class="dropdown"><a href="#" class="dropbtn">Contact</a>
+            <li class="dropdown">
+                <a href="#" class="dropbtn head1">Contact</a>
                 <div class="contact-content">
-                    <a href="#">@WhatsApp</a>
-                    <a href="#">@Facebook</a>
-                    <a href="#">@Call</a>
-                    <a href="#">Em@il</a>
+                    <a href="#" class="head2">@WhatsApp</a>
+                    <a href="#" class="head2">@Facebook</a>
+                    <a href="#" class="head2">@Call</a>
+                    <a href="#" class="head2">Em@il</a>
                 </div>
             </li>
         </ul>
