--- a/Easy4hardware/Service.html
+++ b/Easy4hardware/Service.html
@@ -41,35 +41,38 @@
         <div class="search">
             <input type="text" placeholder="Search here..." id="searchText">
         </div>
-    </nav>
-    <div class="main_container">
-        <div class="Detail-page">
-            <h1>Welcome to the World of Easy4hardware!</h1>
-            <h3>Kindly Enter your Details to reach us</h3>
-            <form action="" method="get" onsubmit="getData()">
-                <!-- ./Data/All data.txt -->
-                <div class="form">
-                    <input type="text" name="service" value="Computer" disabled>
-                    <input type="text" name="name" placeholder="Enter Your Name...">
-                    <input type="text" name="gender" placeholder="Enter Your Gender...">
-                    <input type="text" name="age" placeholder="Enter Your Age...">
-                    <input type="text" name="email" placeholder="Enter Your Email id...">
-                    <input type="text" name="phone" placeholder="Enter Your Phone Number...">
-                </div>
-                <input type="submit" class="btn" value="Submit">
-            </form>
+    </nav> 
+    <h2 class="service-head">Our Services</h2>
+    <p class="service-para"><span>!!!</span> Presently we are providing only Home Service <span>!!!</span></p>
+    <div class="service-container">
+        <div class="services">
+            <img src="./Images/computer1.jpeg" alt="Monitor Service" class="service-img img1">
+            <div class="label">Monitor Services</div>
         </div>
-        <div class="img-container">
-            <img src="https://images.unsplash.com/photo-1591238372338-22d30c883a86?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y29tcHV0ZXIlMjByZXBhaXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="1" id="img1">
-            <!-- <a href=""></a>CPU Repairs And Services</a> -->
-            <img src="https://cdn.pixabay.com/photo/2016/05/11/13/20/laptop-1385700__340.jpg" alt="2" id="img2">
-            <img src="https://images.unsplash.com/photo-1604754742629-3e5728249d73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y29tcHV0ZXIlMjByZXBhaXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="3" id="img3">
-            <img src="https://images.unsplash.com/photo-1596302332910-07f3ac264d7b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8Y29tcHV0ZXIlMjByZXBhaXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="4" id="img4">
+        <div class="services">
+            <img src="https://images.unsplash.com/photo-1591238372338-22d30c883a86?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y29tcHV0ZXIlMjByZXBhaXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="CPU Service" class="service-img img2">
+            <div class="label">CPU Services</div>
         </div>
-        <footer class="footer">
-            Copyrights Ⓒ Easy4hardware| All rights reserved.
-        </footer>
+        <div class="services">
+            <img src="./Images/monitor.jpeg" alt="Computer Service" class="service-img img3">
+            <div class="label">Computer Services</div>
+        </div>
+        <div class="services">
+            <img src="./Images/printer.jpeg" alt="Printer Service" class="service-img img4">
+            <div class="label">Printer Services</div>
+        </div>
+        <div class="services">
+            <img src="./Images/cctv1.jpeg" alt="cctv Service" class="service-img img5">
+            <div class="label">CCTV Camera Services</div> 
+        </div>
+        <div class="services">
+            <img src="./Images/computer.jpeg" alt="" class="service-img img6">
+            <div class="label">Others</div>
+        </div>
     </div>
+    <footer class="footer">
+        Copyrights Ⓒ Easy4hardware| All rights reserved.
+    </footer>
     <script src="./Script/script.js"></script>
 </body>
 </html>
