main index commits

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <body>
   <h1>My Projects</h1>
   <ul>
-    <li><a href="Album/Album.html">Project 1</a></li>
-    <li><a href="Cube3D/cube.html">Project 2</a></li>
-    <li><a href="PetsZone/index.html">Bluetooth App</a></li>
-    <li><a href="Portmorphism/PortFolio.html"></a></li>
-    <li><a href="RegistrationForm/index.html"></a></li>
-    <li><a href="Report_Card/index.html"></a></li>
-    <li><a href="Rothko_Painting/index.html"></a></li>
+    <li><a href="Album/Album.html">Project Album</a></li>
+    <li><a href="Cube3D/cube.html">Project Cube</a></li>
+    <li><a href="PetsZone/index.html">Project PetsZone</a></li>
+    <li><a href="Portmorphism/PortFolio.html">Project Portmorphism</a></li>
+    <li><a href="RegistrationForm/index.html"></a>Project RegistrationForm</li>
+    <li><a href="Report_Card/index.html"></a>Project Report Card</li>
+    <li><a href="Rothko_Painting/index.html"></a>Project Rothko Painting</li>
   </ul>
 </body>
 </html>
