--- a/others/my_html_cs_js/assignment_41.html
+++ b/others/my_html_cs_js/assignment_41.html
@@ -10,5 +10,5 @@
     <body>
         <h1>Employee Details</h1>
     </body>
-    <script src="JS/script.js"></script>
+    <script src="script.js"></script>
 </html>
