--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </a>
 
         <a
-          href="others"
+          href="others/index.html"
           class="group bg-slate-800 rounded-xl p-6 hover:bg-slate-700 transition shadow-lg hover:shadow-xl"
         >
           <h2 class="text-xl font-semibold group-hover:text-blue-400">
