others script updated

--- a/others/index.html
+++ b/others/index.html
@@ -25,7 +25,7 @@
       <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
         <!-- Project Card -->
         <a
-          href="fullstack_web_dev_work"
+          href="fullstack.html"
           class="group bg-slate-800 rounded-xl p-6 hover:bg-slate-700 transition shadow-lg hover:shadow-xl"
         >
           <h2 class="text-xl font-semibold group-hover:text-blue-400">
@@ -35,7 +35,7 @@
         </a>
 
         <a
-          href="my_html_cs_js"
+          href="otherhtml.html"
           class="group bg-slate-800 rounded-xl p-6 hover:bg-slate-700 transition shadow-lg hover:shadow-xl"
         >
           <h2 class="text-xl font-semibold group-hover:text-blue-400">
@@ -50,5 +50,9 @@
     <footer class="text-center text-gray-500 py-8 mt-12">
       © 2026 • Built with ❤️ using HTML, CSS & Tailwind
     </footer>
+
   </body>
 </html>
+
+
+
