--- a/others/index.html
+++ b/others/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My HTML/CSS Projects</title>
+    <title>Others HTML/CSS Projects</title>
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -14,7 +14,7 @@
   >
     <!-- Header -->
     <header class="text-center py-10">
-      <h1 class="text-4xl font-bold mb-2">🚀 My HTML & CSS Projects</h1>
+      <h1 class="text-2xl font-bold mb-2">🚀 Others HTML & CSS Projects</h1>
       <p class="text-gray-400">
         A collection of mini projects hosted on GitHub Pages
       </p>
