tutorial webpage updated with pdf download

--- a/others/fullstack_web_dev_work/Form.html
+++ b/others/fullstack_web_dev_work/Form.html
@@ -63,6 +63,9 @@
             <div class="mb-2">
                 <button class="btn btn-success w-100">Sign Up</button>
             </div>
+            <div class="mb-2">
+                Already have an account? <a href="form_Login.html" target="iframe">Click here</a>
+            </div>
         </div>
     </div>
     <script src="js/jquery.js"></script>
