--- a/others/fullstack_web_dev_work/index.html
+++ b/others/fullstack_web_dev_work/index.html
@@ -98,11 +98,11 @@
         <header>
             <nav>
                 <span><a href="home.html" target="iframe">HOME</a></span>
+                <span><a href="tutorial.html" target="iframe">LEARN</a></span>
                 <span><a href="notes.html" target="iframe">NOTES</a></span>
                 <span><a href="links_items.html" target="iframe">CONTACT</a></span>
-                <span><a href="tutorial.html" target="iframe">LEARN</a></span>
-                <span>LOGIN</span>
-                <span>SIGNUP</span>
+                <span><a href="form_Login.html" target="iframe">LOGIN</a></span>
+                <span><a href="Form.html" target="iframe">SIGNUP</a></span>
             </nav>
         </header>
         <section>
