--- a/others/fullstack_web_dev_work/tutorial.html
+++ b/others/fullstack_web_dev_work/tutorial.html
@@ -45,7 +45,9 @@
                     <img src="assets/pic1.jpg" alt="" width="100%" height="320px" >
                 </div>
                 <div class="card-footer">
-                    <button>Click to Learn</button>
+                    <a href="Intra_Inter_links.html#html" target="iframe">
+                        <button>Click to Learn</button>
+                    </a>
                 </div>
             </div>
             <div class="card">
@@ -56,7 +58,9 @@
                     <img src="assets/pic1.jpg" alt="" width="100%" height="320px">
                 </div>
                 <div class="card-footer">
-                    <button>Click to Learn</button>
+                    <a href="Intra_Inter_links.html#css" target="iframe">
+                        <button>Click to Learn</button>
+                    </a>
                 </div>
             </div>
             <div class="card">
@@ -67,7 +71,9 @@
                     <img src="assets/pic1.jpg" alt="" width="100%" height="320px">
                 </div>
                 <div class="card-footer">
-                    <button>Click to Learn</button>
+                    <a href="Intra_Inter_links.html#JS" target="iframe">
+                        <button>Click to Learn</button>
+                    </a>
                 </div>
             </div>
         </div>
