--- a/others/fullstack_web_dev_work/notes.html
+++ b/others/fullstack_web_dev_work/notes.html
@@ -49,7 +49,9 @@
                 <img src="assets/pic1.jpg" alt="" width="100%" height="320px" >
             </div>
             <div class="card-footer">
-                <button>Download .pdf</button>
+                <a href="assets/pdfs/pdferror.pdf" download>
+                    <button>Download .pdf</button>
+                </a>
             </div>
         </div>
         <div class="card">
@@ -60,7 +62,9 @@
                 <img src="assets/pic1.jpg" alt="" width="100%" height="320px">
             </div>
             <div class="card-footer">
-                <button>Download .pdf</button>
+                <a href="assets/pdfs/pdferror.pdf" download>
+                    <button>Download .pdf</button>
+                </a>
             </div>
         </div>
         <div class="card">
@@ -71,7 +75,9 @@
                 <img src="assets/pic1.jpg" alt="" width="100%" height="320px">
             </div>
             <div class="card-footer">
-                <button>Download .pdf</button>
+                <a href="assets/pdfs/pdferror.pdf" download>
+                    <button>Download .pdf</button>
+                </a>
             </div>
         </div>
     </div>
