--- a/others/fullstack_web_dev_work/home.html
+++ b/others/fullstack_web_dev_work/home.html
@@ -2,6 +2,17 @@
 <html lang="en">
     <head>
         <title>Homepage</title>
+        <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+  crossorigin="anonymous"
+/>
+
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+/>
         <style>
             header, footer
             {
@@ -99,11 +110,21 @@
             <div>
                 <div>Welcome to RockyTutorial</div>
                 <span><a href="tutorial.html" target="iframe">My Courses</a></span>
-                <span>My Notes</span>
+                <!-- <span>My Notes</span> -->
+                <span>
+                    <a class="btn fs-1 fw-normal pb-3 text-white" data-bs-toggle="collapse" data-bs-target="#img1">Get Notes</a>
+                        <span class="collapse fs-6" id="img1"><a class="text-warning" href="notes.html" target="iframe">Click here</a></span>
+                </span>
             </div>
             <figure>
                 <img src="assets/pic1.jpg" alt="" width="100%" height="460px">
             </figure>
         </main>
+        <script src="src/js/jquery.js"></script>
+        <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"
+        ></script>
     </body>
 </html>
